Work with @mjc0042 to fix #51. Datepicker visible when not necessary

--- a/src/angular/app/styles/content.css
+++ b/src/angular/app/styles/content.css
@@ -2,10 +2,6 @@
   min-height: 128px;
 }
 
-#ui-datepicker-div {
-  background-color:white;
-}
-
 .material-description {
   width: 100%;
   max-width:100%;
